@@ -35,6 +35,15 @@ bgcolor="#ffffff"
   <TD BGCOLOR="#ffffff"><A href="##REFRESH_URL##">Refresh</A></TD>
 #endif
 
+#ifdef PRINT_TOGGLE_URL
+#ifdef PRINT_TOGGLE_FLAG
+#if ##PRINT_TOGGLE_FLAG## = 1
+  <TD BGCOLOR="#ffffff"><A href="##PRINT_TOGGLE_URL##">Screen format</A></TD>
+#else
+  <TD BGCOLOR="#ffffff"><A href="##PRINT_TOGGLE_URL##">Print format</A></TD>
+#endif
+#endif
+
 #ifdef LOGOUT_URL
   <TD BGCOLOR="#ffffff"><A href="##LOGOUT_URL##">Logout</A></TD>
 #endif
